Remove period from Hero title

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,8 +11,8 @@
 
 "header": {
 "greeting": "I'm",
-"name": "Doctor.",
-"subtitle": "A super model"
+"name": "Doctor",
+"subtitle": "A super model."
 },
 
 "about": {
